had to add base_data and data_em to get imports to work

--- a/refactor.ipynb
+++ b/refactor.ipynb
@@ -2,12 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "45bf6b44-0690-4486-a3d1-9fdca7d46893",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'PARC'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[1;32m      7\u001b[0m sys\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/home/nmf8dm/research/PARCv2/code\u001b[39m\u001b[38;5;124m\"\u001b[39m )\n\u001b[0;32m----> 8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mPARC\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata_em\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'PARC'"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import numpy as np\n",
@@ -28,10 +40,14 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processed 3 simulation data into State (84, 64, 128, 6) and Velocity (84, 64, 128, 4)\n"
+     "ename": "NameError",
+     "evalue": "name 'DataEnergeticMaterials' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m data \u001b[38;5;241m=\u001b[39m \u001b[43mDataEnergeticMaterials\u001b[49m()\n\u001b[1;32m      2\u001b[0m x, u \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mclip_raw_data(dataset_range \u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m10\u001b[39m), dir_dataset\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/project/SDS/research/Nguyen_storage/data/single_void_data/\u001b[39m\u001b[38;5;124m\"\u001b[39m, dim_reduce\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m8\u001b[39m)\n\u001b[1;32m      3\u001b[0m x_norm, u_norm \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mdata_normalization(x,\u001b[38;5;241m3\u001b[39m), data\u001b[38;5;241m.\u001b[39mdata_normalization(u,\u001b[38;5;241m2\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'DataEnergeticMaterials' is not defined"
      ]
     }
    ],
@@ -832,16 +848,14 @@
    "id": "566e32f0-d04d-42fc-b2a8-7f1c8cbac3ae",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "ss"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "gan",
+   "display_name": "Tensorflow 2.13.0",
    "language": "python",
-   "name": "gan"
+   "name": "tensorflow-2.13.0"
   },
   "language_info": {
    "codemirror_mode": {
@@ -853,7 +867,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
