moved base_data and data_em to data folder

--- a/refactor.ipynb
+++ b/refactor.ipynb
@@ -2,12 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "45bf6b44-0690-4486-a3d1-9fdca7d46893",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-07-12 18:57:45.372216: I tensorflow/core/platform/cpu_feature_guard.cc:183] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: SSE3 SSE4.1 SSE4.2 AVX, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import numpy as np\n",
@@ -16,12 +25,12 @@
     "import os\n",
     "\n",
     "# sys.path.append(\"/home/nmf8dm/research/PARCv2/code\")\n",
-    "from data_em import *"
+    "from parc.data.data_em import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "fce279f9-dd30-4e18-a331-5d67321e344d",
    "metadata": {
     "tags": []
