--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,19 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "45bf6b44-0690-4486-a3d1-9fdca7d46893",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "from . imoprt refactor"
+    "import sys\n",
+    "from hyperparams import * \n",
+    "\n",
+    "sys.path.append( DIR_PKG )\n",
+    "sys.path.append( DIR_DATA )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "id": "22f8bdd3-cebe-4c8b-af63-0f925724d591",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from parc.models.PARCv2 import parcV2\n",
+    "from PARC.data.data_em import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "fce279f9-dd30-4e18-a331-5d67321e344d",
    "metadata": {
     "tags": []
@@ -24,19 +41,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processed 3 simulation data into State (84, 64, 128, 6) and Velocity (84, 64, 128, 4)\n"
+      "Processed 57 simulation data into State (1351, 64, 128, 6) and Velocity (1351, 64, 128, 4)\n",
+      "Max Vec: [6701.681, 6652.869]\n",
+      "Processed 34 simulation data into State (671, 64, 128, 6) and Velocity (671, 64, 128, 4)\n",
+      "Max Vec: [9278.142, 1316.379]\n"
      ]
     }
    ],
    "source": [
     "data = DataEnergeticMaterials()\n",
-    "x, u = data.clip_raw_data(dataset_range = (0,10), dir_dataset=\"/project/SDS/research/Nguyen_storage/data/single_void_data/\", dim_reduce=8)\n",
-    "x_norm, u_norm = data.data_normalization(x,3), data.data_normalization(u,2)"
+    "x, u, names_tn = data.clip_raw_data(dataset_range = (0,100), dir_dataset=\"/project/vil_baek/data/physics/todo_single_void_data\", dim_reduce=8)\n",
+    "x_norm, u_norm = data.data_normalization(x,3), data.vector_normalization(u)\n",
+    "\n",
+    "x, u, names_tt = data.clip_raw_data(dataset_range = (150,200), dir_dataset=\"/project/vil_baek/data/physics/todo_single_void_data\", dim_reduce=8)\n",
+    "x_norm_tt, u_norm_tt = data.data_normalization(x,3), data.vector_normalization(u)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "2830b3e6-d0c7-4131-a3c2-4e73e35a4c71",
    "metadata": {
     "tags": []
@@ -46,17 +69,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(84, 64, 128, 3) (84, 64, 128, 2)\n",
-      "(84, 64, 128, 3) (84, 64, 128, 2)\n"
+      "(1351, 64, 128, 3) (1351, 64, 128, 2)\n",
+      "(1351, 64, 128, 3) (1351, 64, 128, 2)\n"
      ]
     }
    ],
    "source": [
     "x_in = x_norm[0][..., :3]\n",
-    "u_in = u_norm[0][..., :2]\n",
+    "u_in = u_norm[..., :2]\n",
     "\n",
     "x_out = x_norm[0][..., 3:]\n",
-    "u_out = u_norm[0][..., 2:]\n",
+    "u_out = u_norm[..., 2:]\n",
     "\n",
     "print( x_in.shape, u_in.shape ) \n",
     "print( x_out.shape, u_out.shape ) "
@@ -64,23 +87,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "id": "7182256e-89f2-4350-b815-851c47eae932",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-09-18 08:51:16.343451: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2024-09-18 08:51:18.415390: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1525] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 43325 MB memory:  -> device: 0, name: NVIDIA A40, pci bus id: 0000:64:00.0, compute capability: 8.6\n"
+     ]
+    }
+   ],
    "source": [
+    "import tensorflow as tf \n",
+    "\n",
     "dataset_input = tf.data.Dataset.from_tensor_slices( (x_in[...,:3], u_in[...,:2]) )\n",
     "dataset_label = tf.data.Dataset.from_tensor_slices( (x_out[...,-3:], u_out[...,-2:]) )\n",
     "dataset = tf.data.Dataset.zip((dataset_input, dataset_label))\n",
     "dataset = dataset.shuffle(buffer_size = 2192) \n",
-    "dataset = dataset.batch(2)"
+    "dataset = dataset.batch(8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "id": "383e83e4-88db-4e81-8f97-f43b57271667",
    "metadata": {
     "tags": []
@@ -90,214 +125,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/100\n",
-      "42/42 [==============================] - 9s 225ms/step - loss: 0.0183\n",
-      "Epoch 2/100\n",
-      "42/42 [==============================] - 9s 225ms/step - loss: 0.0181\n",
-      "Epoch 3/100\n",
-      "42/42 [==============================] - 9s 225ms/step - loss: 0.0175\n",
-      "Epoch 4/100\n",
-      "42/42 [==============================] - 9s 225ms/step - loss: 0.0177\n",
-      "Epoch 5/100\n",
-      "42/42 [==============================] - 9s 223ms/step - loss: 0.0170\n",
-      "Epoch 6/100\n",
-      "42/42 [==============================] - 9s 223ms/step - loss: 0.0169\n",
-      "Epoch 7/100\n",
-      "42/42 [==============================] - 9s 223ms/step - loss: 0.0168\n",
-      "Epoch 8/100\n",
-      "42/42 [==============================] - 9s 221ms/step - loss: 0.0169\n",
-      "Epoch 9/100\n",
-      "42/42 [==============================] - 9s 221ms/step - loss: 0.0165\n",
-      "Epoch 10/100\n",
-      "42/42 [==============================] - 9s 221ms/step - loss: 0.0162\n",
-      "Epoch 11/100\n",
-      "42/42 [==============================] - 9s 221ms/step - loss: 0.0164\n",
-      "Epoch 12/100\n",
-      "42/42 [==============================] - 9s 221ms/step - loss: 0.0159\n",
-      "Epoch 13/100\n",
-      "42/42 [==============================] - 9s 221ms/step - loss: 0.0162\n",
-      "Epoch 14/100\n",
-      "42/42 [==============================] - 9s 221ms/step - loss: 0.0163\n",
-      "Epoch 15/100\n",
-      "42/42 [==============================] - 9s 221ms/step - loss: 0.0160\n",
-      "Epoch 16/100\n",
-      "42/42 [==============================] - 9s 222ms/step - loss: 0.0155\n",
-      "Epoch 17/100\n",
-      "42/42 [==============================] - 9s 221ms/step - loss: 0.0160\n",
-      "Epoch 18/100\n",
-      "42/42 [==============================] - 9s 221ms/step - loss: 0.0154\n",
-      "Epoch 19/100\n",
-      "42/42 [==============================] - 9s 221ms/step - loss: 0.0152\n",
-      "Epoch 20/100\n",
-      "42/42 [==============================] - 9s 221ms/step - loss: 0.0146\n",
-      "Epoch 21/100\n",
-      "42/42 [==============================] - 9s 221ms/step - loss: 0.0140\n",
-      "Epoch 22/100\n",
-      "42/42 [==============================] - 9s 221ms/step - loss: 0.0134\n",
-      "Epoch 23/100\n",
-      "42/42 [==============================] - 9s 221ms/step - loss: 0.0127\n",
-      "Epoch 24/100\n",
-      "42/42 [==============================] - 9s 221ms/step - loss: 0.0123\n",
-      "Epoch 25/100\n",
-      "42/42 [==============================] - 9s 224ms/step - loss: 0.0118\n",
-      "Epoch 26/100\n",
-      "42/42 [==============================] - 9s 221ms/step - loss: 0.0118\n",
-      "Epoch 27/100\n",
-      "42/42 [==============================] - 9s 221ms/step - loss: 0.0111\n",
-      "Epoch 28/100\n",
-      "42/42 [==============================] - 9s 221ms/step - loss: 0.0109\n",
-      "Epoch 29/100\n",
-      "42/42 [==============================] - 9s 221ms/step - loss: 0.0108\n",
-      "Epoch 30/100\n",
-      "42/42 [==============================] - 9s 221ms/step - loss: 0.0101\n",
-      "Epoch 31/100\n",
-      "42/42 [==============================] - 9s 221ms/step - loss: 0.0101\n",
-      "Epoch 32/100\n",
-      "42/42 [==============================] - 9s 222ms/step - loss: 0.0098\n",
-      "Epoch 33/100\n",
-      "42/42 [==============================] - 9s 221ms/step - loss: 0.0096\n",
-      "Epoch 34/100\n",
-      "42/42 [==============================] - 9s 221ms/step - loss: 0.0098\n",
-      "Epoch 35/100\n",
-      "42/42 [==============================] - 9s 223ms/step - loss: 0.0095\n",
-      "Epoch 36/100\n",
-      "42/42 [==============================] - 9s 221ms/step - loss: 0.0096\n",
-      "Epoch 37/100\n",
-      "42/42 [==============================] - 9s 221ms/step - loss: 0.0096\n",
-      "Epoch 38/100\n",
-      "42/42 [==============================] - 9s 221ms/step - loss: 0.0092\n",
-      "Epoch 39/100\n",
-      "42/42 [==============================] - 9s 221ms/step - loss: 0.0093\n",
-      "Epoch 40/100\n",
-      "42/42 [==============================] - 9s 221ms/step - loss: 0.0089\n",
-      "Epoch 41/100\n",
-      "42/42 [==============================] - 9s 221ms/step - loss: 0.0091\n",
-      "Epoch 42/100\n",
-      "42/42 [==============================] - 9s 222ms/step - loss: 0.0089\n",
-      "Epoch 43/100\n",
-      "42/42 [==============================] - 9s 221ms/step - loss: 0.0085\n",
-      "Epoch 44/100\n",
-      "42/42 [==============================] - 9s 221ms/step - loss: 0.0086\n",
-      "Epoch 45/100\n",
-      "42/42 [==============================] - 9s 221ms/step - loss: 0.0084\n",
-      "Epoch 46/100\n",
-      "42/42 [==============================] - 9s 221ms/step - loss: 0.0085\n",
-      "Epoch 47/100\n",
-      "42/42 [==============================] - 9s 221ms/step - loss: 0.0084\n",
-      "Epoch 48/100\n",
-      "42/42 [==============================] - 9s 221ms/step - loss: 0.0081\n",
-      "Epoch 49/100\n",
-      "42/42 [==============================] - 9s 221ms/step - loss: 0.0082\n",
-      "Epoch 50/100\n",
-      "42/42 [==============================] - 9s 221ms/step - loss: 0.0079\n",
-      "Epoch 51/100\n",
-      "42/42 [==============================] - 9s 222ms/step - loss: 0.0082\n",
-      "Epoch 52/100\n",
-      "42/42 [==============================] - 9s 221ms/step - loss: 0.0079\n",
-      "Epoch 53/100\n",
-      "42/42 [==============================] - 9s 221ms/step - loss: 0.0077\n",
-      "Epoch 54/100\n",
-      "42/42 [==============================] - 9s 221ms/step - loss: 0.0078\n",
-      "Epoch 55/100\n",
-      "42/42 [==============================] - 9s 221ms/step - loss: 0.0076\n",
-      "Epoch 56/100\n",
-      "42/42 [==============================] - 10s 227ms/step - loss: 0.0078\n",
-      "Epoch 57/100\n",
-      "42/42 [==============================] - 9s 226ms/step - loss: 0.0077\n",
-      "Epoch 58/100\n",
-      "42/42 [==============================] - 9s 226ms/step - loss: 0.0078\n",
-      "Epoch 59/100\n",
-      "42/42 [==============================] - 9s 223ms/step - loss: 0.0075\n",
-      "Epoch 60/100\n",
-      "42/42 [==============================] - 9s 225ms/step - loss: 0.0073\n",
-      "Epoch 61/100\n",
-      "42/42 [==============================] - 10s 227ms/step - loss: 0.0074\n",
-      "Epoch 62/100\n",
-      "42/42 [==============================] - 9s 226ms/step - loss: 0.0078\n",
-      "Epoch 63/100\n",
-      "42/42 [==============================] - 9s 226ms/step - loss: 0.0075\n",
-      "Epoch 64/100\n",
-      "42/42 [==============================] - 9s 225ms/step - loss: 0.0073\n",
-      "Epoch 65/100\n",
-      "42/42 [==============================] - 9s 224ms/step - loss: 0.0075\n",
-      "Epoch 66/100\n",
-      "42/42 [==============================] - 9s 226ms/step - loss: 0.0073\n",
-      "Epoch 67/100\n",
-      "42/42 [==============================] - 9s 225ms/step - loss: 0.0070\n",
-      "Epoch 68/100\n",
-      "42/42 [==============================] - 10s 226ms/step - loss: 0.0068\n",
-      "Epoch 69/100\n",
-      "42/42 [==============================] - 9s 225ms/step - loss: 0.0070\n",
-      "Epoch 70/100\n",
-      "42/42 [==============================] - 9s 224ms/step - loss: 0.0070\n",
-      "Epoch 71/100\n",
-      "42/42 [==============================] - 10s 227ms/step - loss: 0.0072\n",
-      "Epoch 72/100\n",
-      "42/42 [==============================] - 9s 226ms/step - loss: 0.0068\n",
-      "Epoch 73/100\n",
-      "42/42 [==============================] - 10s 227ms/step - loss: 0.0069\n",
-      "Epoch 74/100\n",
-      "42/42 [==============================] - 9s 225ms/step - loss: 0.0066\n",
-      "Epoch 75/100\n",
-      "42/42 [==============================] - 9s 225ms/step - loss: 0.0066\n",
-      "Epoch 76/100\n",
-      "42/42 [==============================] - 9s 225ms/step - loss: 0.0066\n",
-      "Epoch 77/100\n",
-      "42/42 [==============================] - 9s 226ms/step - loss: 0.0064\n",
-      "Epoch 78/100\n",
-      "42/42 [==============================] - 9s 226ms/step - loss: 0.0068\n",
-      "Epoch 79/100\n",
-      "42/42 [==============================] - 10s 227ms/step - loss: 0.0066\n",
-      "Epoch 80/100\n",
-      "42/42 [==============================] - 9s 224ms/step - loss: 0.0065\n",
-      "Epoch 81/100\n",
-      "42/42 [==============================] - 10s 226ms/step - loss: 0.0065\n",
-      "Epoch 82/100\n",
-      "42/42 [==============================] - 9s 225ms/step - loss: 0.0066\n",
-      "Epoch 83/100\n",
-      "42/42 [==============================] - 10s 226ms/step - loss: 0.0065\n",
-      "Epoch 84/100\n",
-      "42/42 [==============================] - 9s 225ms/step - loss: 0.0061\n",
-      "Epoch 85/100\n",
-      "42/42 [==============================] - 9s 225ms/step - loss: 0.0065\n",
-      "Epoch 86/100\n",
-      "42/42 [==============================] - 10s 226ms/step - loss: 0.0065\n",
-      "Epoch 87/100\n",
-      "42/42 [==============================] - 10s 227ms/step - loss: 0.0062\n",
-      "Epoch 88/100\n",
-      "42/42 [==============================] - 9s 224ms/step - loss: 0.0067\n",
-      "Epoch 89/100\n",
-      "42/42 [==============================] - 9s 224ms/step - loss: 0.0063\n",
-      "Epoch 90/100\n",
-      "42/42 [==============================] - 9s 226ms/step - loss: 0.0063\n",
-      "Epoch 91/100\n",
-      "42/42 [==============================] - 9s 226ms/step - loss: 0.0060\n",
-      "Epoch 92/100\n",
-      "42/42 [==============================] - 9s 224ms/step - loss: 0.0060\n",
-      "Epoch 93/100\n",
-      "42/42 [==============================] - 9s 225ms/step - loss: 0.0062\n",
-      "Epoch 94/100\n",
-      "42/42 [==============================] - 9s 224ms/step - loss: 0.0062\n",
-      "Epoch 95/100\n",
-      "42/42 [==============================] - 9s 226ms/step - loss: 0.0058\n",
-      "Epoch 96/100\n",
-      "42/42 [==============================] - 10s 227ms/step - loss: 0.0058\n",
-      "Epoch 97/100\n",
-      "42/42 [==============================] - 9s 225ms/step - loss: 0.0060\n",
-      "Epoch 98/100\n",
-      "42/42 [==============================] - 9s 225ms/step - loss: 0.0059\n",
-      "Epoch 99/100\n",
-      "42/42 [==============================] - 9s 226ms/step - loss: 0.0057\n",
-      "Epoch 100/100\n",
-      "42/42 [==============================] - 9s 225ms/step - loss: 0.0057\n"
+      "Epoch 1/10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-09-18 08:51:25.943040: I tensorflow/stream_executor/cuda/cuda_dnn.cc:366] Loaded cuDNN version 8201\n",
+      "2024-09-18 08:51:28.655077: I tensorflow/core/platform/default/subprocess.cc:304] Start cannot spawn child process: No such file or directory\n",
+      "2024-09-18 08:51:28.656980: I tensorflow/core/platform/default/subprocess.cc:304] Start cannot spawn child process: No such file or directory\n",
+      "2024-09-18 08:51:28.657005: W tensorflow/stream_executor/gpu/asm_compiler.cc:80] Couldn't get ptxas version string: INTERNAL: Couldn't invoke ptxas --version\n",
+      "2024-09-18 08:51:28.658306: I tensorflow/core/platform/default/subprocess.cc:304] Start cannot spawn child process: No such file or directory\n",
+      "2024-09-18 08:51:28.658338: W tensorflow/stream_executor/gpu/redzone_allocator.cc:314] INTERNAL: Failed to launch ptxas\n",
+      "Relying on driver to perform ptx compilation. \n",
+      "Modify $PATH to customize ptxas location.\n",
+      "This message will be only logged once.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "169/169 [==============================] - 147s 775ms/step - loss: 3217.7734\n",
+      "Epoch 2/10\n",
+      "169/169 [==============================] - 128s 755ms/step - loss: 2771.7714\n",
+      "Epoch 3/10\n",
+      "169/169 [==============================] - 128s 755ms/step - loss: 2507.4100\n",
+      "Epoch 4/10\n",
+      "169/169 [==============================] - 128s 755ms/step - loss: 2183.9645\n",
+      "Epoch 5/10\n",
+      "169/169 [==============================] - 128s 755ms/step - loss: 2042.5786\n",
+      "Epoch 6/10\n",
+      "169/169 [==============================] - 128s 755ms/step - loss: 1930.0300\n",
+      "Epoch 7/10\n",
+      "169/169 [==============================] - 128s 756ms/step - loss: 1848.8239\n",
+      "Epoch 8/10\n",
+      "169/169 [==============================] - 128s 756ms/step - loss: 1770.5047\n",
+      "Epoch 9/10\n",
+      "169/169 [==============================] - 128s 756ms/step - loss: 1713.5670\n",
+      "Epoch 10/10\n",
+      "169/169 [==============================] - 128s 756ms/step - loss: 1664.5022\n"
      ]
     }
    ],
    "source": [
     "tf.keras.backend.clear_session()\n",
-    "parc = refactor.parcV2(n_ts=1, numerical_int'fe', resnet_blocks=50)\n",
+    "\n",
+    "parc = parcV2( n_ts=1, numerical_int='fe', resnet_blocks=50 )\n",
     "parc.compile( optimizer=tf.keras.optimizers.Adam(learning_rate=1e-5, beta_1=0.9, beta_2=0.999) )\n",
-    "history = parc.fit( dataset, epochs=100, shuffle=True )"
+    "history = parc.fit( dataset, epochs=10, shuffle=True )"
    ]
   },
   {
