update demo file after module renaming

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "45bf6b44-0690-4486-a3d1-9fdca7d46893",
    "metadata": {
     "tags": []
@@ -18,20 +18,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "22f8bdd3-cebe-4c8b-af63-0f925724d591",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "from parc.models.PARCv2 import parcV2\n",
+    "from parc.models.PARCv2 import ParcV2\n",
     "from PARC.data.data_em import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "fce279f9-dd30-4e18-a331-5d67321e344d",
    "metadata": {
     "tags": []
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "2830b3e6-d0c7-4131-a3c2-4e73e35a4c71",
    "metadata": {
     "tags": []
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "7182256e-89f2-4350-b815-851c47eae932",
    "metadata": {
     "tags": []
@@ -97,9 +97,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-09-18 08:51:16.343451: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F FMA\n",
+      "2024-09-25 09:34:47.540378: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-09-18 08:51:18.415390: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1525] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 43325 MB memory:  -> device: 0, name: NVIDIA A40, pci bus id: 0000:64:00.0, compute capability: 8.6\n"
+      "2024-09-25 09:34:50.146864: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1525] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 30728 MB memory:  -> device: 0, name: Tesla V100-SXM2-32GB, pci bus id: 0000:18:00.0, compute capability: 7.0\n"
      ]
     }
    ],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "383e83e4-88db-4e81-8f97-f43b57271667",
    "metadata": {
     "tags": []
@@ -132,12 +132,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-09-18 08:51:25.943040: I tensorflow/stream_executor/cuda/cuda_dnn.cc:366] Loaded cuDNN version 8201\n",
-      "2024-09-18 08:51:28.655077: I tensorflow/core/platform/default/subprocess.cc:304] Start cannot spawn child process: No such file or directory\n",
-      "2024-09-18 08:51:28.656980: I tensorflow/core/platform/default/subprocess.cc:304] Start cannot spawn child process: No such file or directory\n",
-      "2024-09-18 08:51:28.657005: W tensorflow/stream_executor/gpu/asm_compiler.cc:80] Couldn't get ptxas version string: INTERNAL: Couldn't invoke ptxas --version\n",
-      "2024-09-18 08:51:28.658306: I tensorflow/core/platform/default/subprocess.cc:304] Start cannot spawn child process: No such file or directory\n",
-      "2024-09-18 08:51:28.658338: W tensorflow/stream_executor/gpu/redzone_allocator.cc:314] INTERNAL: Failed to launch ptxas\n",
+      "2024-09-25 09:35:04.259186: I tensorflow/stream_executor/cuda/cuda_dnn.cc:366] Loaded cuDNN version 8201\n",
+      "2024-09-25 09:35:06.570108: I tensorflow/core/platform/default/subprocess.cc:304] Start cannot spawn child process: No such file or directory\n",
+      "2024-09-25 09:35:06.573276: I tensorflow/core/platform/default/subprocess.cc:304] Start cannot spawn child process: No such file or directory\n",
+      "2024-09-25 09:35:06.573305: W tensorflow/stream_executor/gpu/asm_compiler.cc:80] Couldn't get ptxas version string: INTERNAL: Couldn't invoke ptxas --version\n",
+      "2024-09-25 09:35:06.574743: I tensorflow/core/platform/default/subprocess.cc:304] Start cannot spawn child process: No such file or directory\n",
+      "2024-09-25 09:35:06.574777: W tensorflow/stream_executor/gpu/redzone_allocator.cc:314] INTERNAL: Failed to launch ptxas\n",
       "Relying on driver to perform ptx compilation. \n",
       "Modify $PATH to customize ptxas location.\n",
       "This message will be only logged once.\n"
@@ -147,32 +147,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "169/169 [==============================] - 147s 775ms/step - loss: 3217.7734\n",
+      "169/169 [==============================] - 226s 1s/step - loss: 3202.0931\n",
       "Epoch 2/10\n",
-      "169/169 [==============================] - 128s 755ms/step - loss: 2771.7714\n",
+      "169/169 [==============================] - 201s 1s/step - loss: 2766.6017\n",
       "Epoch 3/10\n",
-      "169/169 [==============================] - 128s 755ms/step - loss: 2507.4100\n",
+      "169/169 [==============================] - 201s 1s/step - loss: 2448.4523\n",
       "Epoch 4/10\n",
-      "169/169 [==============================] - 128s 755ms/step - loss: 2183.9645\n",
+      "169/169 [==============================] - 201s 1s/step - loss: 2268.8440\n",
       "Epoch 5/10\n",
-      "169/169 [==============================] - 128s 755ms/step - loss: 2042.5786\n",
+      "169/169 [==============================] - 201s 1s/step - loss: 2168.1443\n",
       "Epoch 6/10\n",
-      "169/169 [==============================] - 128s 755ms/step - loss: 1930.0300\n",
+      "169/169 [==============================] - 201s 1s/step - loss: 2010.3629\n",
       "Epoch 7/10\n",
-      "169/169 [==============================] - 128s 756ms/step - loss: 1848.8239\n",
+      "169/169 [==============================] - 201s 1s/step - loss: 1925.4837\n",
       "Epoch 8/10\n",
-      "169/169 [==============================] - 128s 756ms/step - loss: 1770.5047\n",
+      "169/169 [==============================] - 201s 1s/step - loss: 1854.0184\n",
       "Epoch 9/10\n",
-      "169/169 [==============================] - 128s 756ms/step - loss: 1713.5670\n",
+      "169/169 [==============================] - 201s 1s/step - loss: 1794.6689\n",
       "Epoch 10/10\n",
-      "169/169 [==============================] - 128s 756ms/step - loss: 1664.5022\n"
+      "169/169 [==============================] - 201s 1s/step - loss: 1734.0852\n"
      ]
     }
    ],
    "source": [
     "tf.keras.backend.clear_session()\n",
     "\n",
-    "parc = parcV2( n_ts=1, numerical_int='fe', resnet_blocks=50 )\n",
+    "parc = ParcV2( n_ts=1, numerical_int='fe', resnet_blocks=50 )\n",
     "parc.compile( optimizer=tf.keras.optimizers.Adam(learning_rate=1e-5, beta_1=0.9, beta_2=0.999) )\n",
     "history = parc.fit( dataset, epochs=10, shuffle=True )"
    ]
