--- a/demo.ipynb
+++ b/demo.ipynb
@@ -230,6 +230,8 @@
     }
    ],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "idx = 10\n",
     "plt.figure(figsize=(10,5))\n",
     "plt.subplot( 121 ) \n",
